--- a/random_color_generator/style.css
+++ b/random_color_generator/style.css
@@ -37,7 +37,7 @@ body{
     flex-direction: column;
     gap: 20px;
 }
-.hex-color-value{
+.hex-color-value,.rgb-color-value{
     color: #fff;
     font-weight: bold;
     font-size: 30px;
@@ -50,4 +50,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.rgb-color-container button{
+    padding: 10px 20px;
+    font-size: 15px;
+    border: 1px solid powderblue;
+    border-radius: 5px;
+    font-weight: bold;
+    background-color: aqua;
+    cursor: pointer;
 }
